implement refresh route
