# internal/application/auth/routes.go
@@ -21,6 +21,8 @@ func NewAuthRoutes(
 
 func (r *AuthRoutes) Setup() {
 	group := r.handler.Gin.Group("/api/v1/auth")
-
-	group.POST("/login", r.authController.Login)
+	{
+		group.POST("/login", r.authController.Login)
+		group.POST("/refresh", r.authController.Refresh)
+	}
 }
